bug fix on small devise in post likes counter, update readme

--- a/src/components/Profile/MyPosts/Post/Posts.module.css
+++ b/src/components/Profile/MyPosts/Post/Posts.module.css
@@ -43,7 +43,7 @@
 }
 
 .post_likes {
-    margin: 10px;
+    margin: 5px;
     align-self: end;
     position: relative;
 }
@@ -59,6 +59,7 @@
 }
 
 .post_likes_like_count {
+
     cursor: default;
 }
 
